--- a/index.html
+++ b/index.html
@@ -202,9 +202,8 @@
             width: auto;
             height: auto;
             transform: translate(-50%, -50%);
-            opacity: 0.4;
+            opacity: 0.6;
             object-fit: cover;
-            filter: blur(1px) brightness(0.8);
         }
 
         .background-image {
@@ -213,11 +212,10 @@
             left: 0;
             width: 100%;
             height: 100%;
-            opacity: 0.4;
+            opacity: 0.6;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            filter: blur(1px) brightness(0.8);
         }
 
         .background-svg {
@@ -226,10 +224,9 @@
             left: 0;
             width: 100%;
             height: 100%;
-            opacity: 0.6;
+            opacity: 0.8;
             background-size: cover;
             background-position: center;
-            filter: blur(1px);
         }
 
         .container {
@@ -307,17 +304,27 @@
         }
 
         body.immersive-mode #record-screen .timer-display {
-            /* 位置はそのまま固定 */
+            position: fixed !important;
+            top: 50vh !important;
+            left: 50% !important;
+            transform: translateX(-50%) translateY(-50%) !important;
+            z-index: 9999 !important;
+            margin: 0 !important;
+            width: 100vw !important;
+            text-align: center !important;
         }
 
         body.immersive-mode #record-screen .elapsed-time {
-            color: rgba(255, 255, 255, 0.9) !important;
-            text-shadow: 0 0 20px rgba(0, 0, 0, 0.8), 2px 2px 4px rgba(0, 0, 0, 0.6) !important;
+            font-size: 5rem !important;
+            color: rgba(255, 255, 255, 0.95) !important;
+            text-shadow: 0 0 40px rgba(0, 0, 0, 0.9), 3px 3px 6px rgba(0, 0, 0, 0.8) !important;
             background: transparent !important;
             padding: 0 !important;
             border-radius: 0 !important;
             backdrop-filter: none !important;
             border: none !important;
+            margin: 0 !important;
+            display: block !important;
         }
 
         body.immersive-mode .navigation {
@@ -1232,7 +1239,7 @@
                     </div>
                 </div>
 
-                <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
+                <div style="display: grid; grid-template-columns: 1fr; gap: 20px;">
                     <div class="card">
                         <h3 class="card-title">カテゴリ別時間</h3>
                         <div id="category-stats">
