--- a/index.html
+++ b/index.html
@@ -1999,7 +1999,7 @@
                             <input type="file" id="custom-alarm-sound" class="file-input" accept="audio/*,.mp3,.wav,.ogg,.m4a">
                             <label for="custom-alarm-sound" class="file-input-label">
                                 🎵 カスタムアラーム音をアップロード<br>
-                                <small>MP3、WAV、OGG、M4Aなど（最大50MB）</small>
+                                <small>MP3、WAV、OGG、M4Aなどの音声ファイルに対応</small>
                             </label>
                         </div>
                         
